@@ -64,48 +64,6 @@ typedef enum {
 
 typedef struct rb_transcoder rb_transcoder;
 
-/* dynamic structure, one per conversion (similar to iconv_t) */
-/* may carry conversion state (e.g. for iso-2022-jp) */
-typedef struct rb_transcoding {
-    const rb_transcoder *transcoder;
-
-    int flags;
-
-    int resume_position;
-    unsigned int next_table;
-    VALUE next_info;
-    unsigned char next_byte;
-
-    int recognized_len; /* already interpreted */
-    int readagain_len; /* not yet interpreted */
-    union {
-        unsigned char ary[8]; /* max_input <= sizeof(ary) */
-        unsigned char *ptr; /* length: max_input */
-    } readbuf; /* recognized_len + readagain_len used */
-
-    int writebuf_off;
-    int writebuf_len;
-    union {
-        unsigned char ary[8]; /* max_output <= sizeof(ary) */
-        unsigned char *ptr; /* length: max_output */
-    } writebuf;
-
-    void *state; /* opaque data for stateful encoding */
-} rb_transcoding;
-#define TRANSCODING_READBUF(tc) \
-    ((tc)->transcoder->max_input <= sizeof((tc)->readbuf.ary) ? \
-     (tc)->readbuf.ary : \
-     (tc)->readbuf.ptr)
-#define TRANSCODING_WRITEBUF(tc) \
-    ((tc)->transcoder->max_output <= sizeof((tc)->writebuf.ary) ? \
-     (tc)->writebuf.ary : \
-     (tc)->writebuf.ptr)
-#define TRANSCODING_STATE_EMBED_MAX sizeof(void *)
-#define TRANSCODING_STATE(tc) \
-    ((tc)->transcoder->state_size <= sizeof((tc)->state) ? \
-     (void *)&(tc)->state : \
-     (tc)->state)
-
 /* static structure, one per supported encoding pair */
 struct rb_transcoder {
     const char *from_encoding;
